added some basic css

--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/recipe-style.css">
     <title>Falafel</title>
 </head>
 <body>
+    <p>
+        <a href="../index.html">Egyptian Recipes</a>
+    </p>
+
     <h1>Falafel</h1>
+
     <img src="../img/Falafel.jpeg" alt="Falafel" width="500px">
+
     <h2>Description</h2>
     <p>Ta'ameya (Egyptian falafel) is an all-time favorite street food in Egypt. In most parts of the Middle East, falafel is made with ground chickpeas. In Egypt however, we make it with dried fava beans. These are best served with pita bread, tomato, onions, and tahini sauce.</p>
+
     <h2>Ingredients</h2>
     <ul>
         <li>2 cups dried split fava beans</li>
@@ -24,6 +33,7 @@
         <li>1 cup sesame seeds (Optional)</li>
         <li>1 quart vegetable oil for frying, or as needed</li>
     </ul>
+
     <h2>Steps</h2>
     <ol>
         <li>Place fava beans into large bowl and cover with several inches of water. Let soak, 8 hours to overnight. Drain.</li>
@@ -32,6 +42,5 @@
         <li>Shape fava bean mixture into about 50 balls. Roll balls in sesame seeds to coat.</li>
         <li>Fill a large saucepan 1/4 full with oil; heat over medium heat. Fry fava bean balls in batches until golden brown, 3 to 5 minutes per batch. Drain on paper towels.</li>
     </ol>
-    <a href="../index.html">Home</a>
 </body>
 </html>
