--- a/recipes/koshary.html
+++ b/recipes/koshary.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/recipe-style.css">
     <title>Koshary</title>
 </head>
 <body>
+    <p>
+        <a href="../index.html">Egyptian Recipes</a>
+    </p>
+
     <h1>Koshary</h1>
+
     <img src="../img/Koshary.webp" alt="Koshary" width="500px">
+
     <h2>Description</h2>
     <p>This recipe is one of the most famous recipes in Egypt. It's a traditional food that is delicious and savory.</p>
+
     <h2>Ingredients</h2>
     <ul>
         <li>1 tablespoon vegetable oil</li>
@@ -40,6 +49,5 @@
         <li>Place half of the onion mixture into a saucepan. Mix in the vinegar. Add the chopped tomatoes and tomato paste, black pepper, 2 1/2 teaspoons salt, cumin, and cayenne (if using). Bring to a boil then reduce heat to medium-low and simmer about 12 minutes.</li>
         <li>Serve by placing a spoonful of rice, then macaroni, and then the lentils on serving plates. Sprinkle with some of the browned onions, then top with tomato sauce.</li>
     </ol>
-    <a href="../index.html">Home</a>
 </body>
 </html>
