--- a/recipes/umm-ali.html
+++ b/recipes/umm-ali.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/recipe-style.css">
     <title>Umm Ali</title>
 </head>
 <body>
+    <p>
+        <a href="../index.html">Egyptian Recipes</a>
+    </p>
+
     <h1>Umm Ali</h1>
+
     <img src="../img/umm-ali.jpg" alt="UMM Ali" width="500px">
+
     <h2>Description</h2>
     <p>Umm Ali is a delicious Egyptian dessert equivalent to North America's bread pudding. You can serve it warm with a scoop of French vanilla ice cream.</p>
+
     <h2>Ingredients</h2>
     <ul>
         <li>1 sheet frozen puff pastry, thawed</li>
@@ -22,6 +31,7 @@
         <li>1 cup white sugar</li>
         <li>1 teaspoon vanilla extract</li>
     </ul>
+
     <h2>Steps</h2>
     <ol>
         <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
@@ -31,6 +41,5 @@
         <li>Pour milk into a saucepan; stir in sugar and vanilla. Cook over medium-high heat, stirring occasionally, until hot but not quite boiling. Pour over puff pastry mixture in the baking dish.</li>
         <li>Return to the oven and bake for 15 minutes. Turn on the broiler and continue baking until the top is browned, about 2 minutes. Let stand for 5 minutes before serving warm.</li>
     </ol>
-    <a href="../index.html">Home</a>
 </body>
 </html>
