--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main-style.css">
     <title>Egyptian Recipes</title>
 </head>
 <body>
-    <h1>Egyptian Recipes</h1>
+    <h1 class="logo">Egyptian Recipes</h1>
     <ul>
         <li><a href="recipes/falafel.html">Falafel</a></li>
         <li><a href="recipes/koshary.html">Koshary</a></li>
